--- a/projects.Rmd
+++ b/projects.Rmd
@@ -8,10 +8,13 @@ hidediscus: true
 
 Check out some of my coding projects below:
 
+<i class="fa fa-stethoscope"></i> &nbsp; [Neuroscience: Using PEG Fusion to advance Nerve Repair](/project/project3/)
 
 <i class="fa fa-signal"></i> &nbsp; [Wrangling & Exploratory Data Analysis](/project/project1/)
 
 <i class="fa fa-line-chart"></i> &nbsp; [Modeling, Inference, Prediction](/project/project2/)
+
+<i class="fa fa-pie-chart"></i> &nbsp; [Parallel Programming: K-Means Clustering](/project/project2/)
 
 <!--
 <i class="fa fa-pie-chart"></i> 
