--- a/resume.Rmd
+++ b/resume.Rmd
@@ -6,6 +6,4 @@ hiderelated: true
 hidediscus: true
 ---
 
-<center>
-<iframe src="/resume.pdf" width="100%" height="800" border="0"></iframe>
-</center>
+<body><div align="center"><iframe width="800" height="1000" src="/resume.pdf" frameborder="1px"></iframe></div></body>
