--- a/project/project5.Rmd
+++ b/project/project5.Rmd
@@ -6,5 +6,4 @@ hiderelated: true
 hidediscus: true
 ---
 
-<body><div align="center"><iframe width="800" height="1000" src="/Users/AkshatPatni/Desktop/website/static/OMP_paper2.pdf" frameborder="1px"></iframe></div></body>
-
+<body><div align="center"><iframe width="800" height="1000" src="/OMP_paper1.pdf" frameborder="1px"></iframe></div></body>
